[package]
name = "intiface-engine"
version = "3.0.4"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "CLI and Library frontend for the Buttplug sex toy control library"
license = "BSD-3-Clause"
homepage = "http://intiface.com"
repository = "https://github.com/intiface/intiface-engine.git"
readme = "README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2021"
exclude = [".vscode/**"]

[lib]
name = "intiface_engine"
path = "src/lib.rs"

[[bin]]
name = "intiface-engine"
path = "src/bin/main.rs"

[features]
default=[]
allow-unstable-v4-connections=["buttplug/allow-unstable-v4-connections"]
tokio-console=["console-subscriber"]

[dependencies]
# buttplug = { path = "../buttplug/buttplug" }
buttplug = "9.0.4"
argh = "0.1.12"
log = "0.4.22"
futures = "0.3.31"
tracing-fmt = "0.1.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread", "macros", "io-std", "fs", "signal", "io-util"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
backtrace = "0.3.74"
ctrlc = "3.4.5"
tokio-util = "0.7.12"
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
getset = "0.1.3"
async-trait = "0.1.83"
once_cell = "1.20.2"
lazy_static = "1.5.0"
console-subscriber = { version="0.4.0", optional = true }
local-ip-address = "0.6.3"
rand = "0.8.5"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
url = "2.5.2"
libmdns = "0.9.1"
tokio-stream = "0.1.16"

[build-dependencies]
vergen-gitcl = {version = "1.0.1", features = ["build"]}
anyhow = "1.0.89"
